--- a/main.html
+++ b/main.html
@@ -1,4 +1,7 @@
+Box Model
+
 <!DOCTYPE html>
+
 
 <html>
 
@@ -8,6 +11,10 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	  <div class="container">
+        <div class="green"></div>
+        <div class="yellow"></div>
+        <div class="red"></div>
     <script type="text/javascript" src="./script.js">
 </script>
 
